--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,22 +66,19 @@ flutter:
     - assets/images/promo_2.jpg
     - assets/images/promo_3.jpg
     - assets/images/promo_4.jpg
-    - assets/images/tix_1.jpg
-    - assets/images/tix_2.jpg
-    - assets/images/tix_3.jpg
-    - assets/images/tix_4.jpg
-    - assets/images/tix_5.jpg
-    - assets/images/t1.jpg
-    - assets/images/t2.jpg
-    - assets/images/t3.jpg
-    - assets/images/t4.jpg
-    - assets/images/t5.jpg
-    - assets/images/p1.jpg
-    - assets/images/p2.jpg
-    - assets/images/p3.jpg
-    - assets/images/p4.jpg
-    - assets/images/p5.jpg
-    - assets/images/p6.jpg
+
+    - assets/images/game1.jpg
+    - assets/images/game2.jpg
+    - assets/images/game3.jpg
+    - assets/images/game4.jpg
+
+    - assets/images/pg1.jpg
+    - assets/images/pg2.jpg
+    - assets/images/pg3.JPG
+
+    - assets/images/g1.jpg
+    - assets/images/g2.jpg
+    - assets/images/g3.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
